[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/interfaces/Fields/child/NumberField.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/interfaces/Fields/unique/IngredientsField.gd" type="Script" id=2]
[ext_resource path="res://src/interfaces/Fields/child/SuggestionInputField.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/PT-Bold_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/interfaces/Form/Form.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/interfaces/Fields/ComplexField.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/interfaces/Fields/child/InputField.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/themes/Button_Custom_Pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/themes/Button_Custom_Normal.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/themes/Button_Custom_Hover.tres" type="StyleBox" id=10]

[node name="IngredientsField" instance=ExtResource( 6 )]
script = ExtResource( 2 )
field_id = "test"
title = "Ingrédients"
tooltip_activated = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2" index="1"]
margin_left = 4.0
margin_right = 1920.0
margin_bottom = 1046.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="HBoxContainer2/VBoxContainer" index="0"]
margin_right = 1916.0
margin_bottom = 928.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer2/VBoxContainer/Panel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 6
custom_constants/margin_left = 12
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer2/VBoxContainer/Panel/MarginContainer" index="0"]
margin_left = 12.0
margin_top = 6.0
margin_right = 1904.0
margin_bottom = 920.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="HBoxContainer2/VBoxContainer/Panel/MarginContainer/ScrollContainer" index="0"]
margin_right = 1892.0
margin_bottom = 914.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = -6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2/VBoxContainer" index="1"]
margin_top = 928.0
margin_right = 1916.0
margin_bottom = 1046.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="HBoxContainer2/VBoxContainer/VBoxContainer" index="0"]
margin_right = 1916.0
margin_bottom = 30.0
custom_constants/shadow_offset_y = 0
custom_fonts/font = ExtResource( 4 )
text = "Ajouter un ingrédient"
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer/VBoxContainer" index="1"]
margin_top = 38.0
margin_right = 1916.0
margin_bottom = 74.0
custom_constants/separation = 6

[node name="QuantityField" parent="HBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 634.0
margin_bottom = 36.0
field_id = "quantity"
title_visible = false

[node name="UnitField" parent="HBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 640.0
margin_right = 1275.0
margin_bottom = 36.0
field_id = "unit"
is_required = false
title_visible = false
placeholder_label = "Unité"
only_suggestion = true
approximate = true
limit = 8

[node name="IngredientField" parent="HBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer" index="2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1281.0
margin_right = 1916.0
margin_bottom = 36.0
field_id = "ingredient"
title_visible = false
placeholder_label = "Ingrédient"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer/VBoxContainer" index="2"]
margin_top = 82.0
margin_right = 1916.0
margin_bottom = 118.0
custom_constants/separation = 10

[node name="AdditionalField" parent="HBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer2" index="0" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1810.0
margin_bottom = 36.0
field_id = "additional"
is_required = false
title_visible = false
placeholder_text = "Complément"

[node name="Add" type="Button" parent="HBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer2" index="1"]
margin_left = 1820.0
margin_right = 1916.0
margin_bottom = 36.0
rect_min_size = Vector2( 96, 36 )
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
text = "Ajouter"
__meta__ = {
"_editor_description_": ""
}

[node name="Form" parent="." index="2" instance=ExtResource( 5 )]
fields = [ NodePath("../HBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer/QuantityField"), NodePath("../HBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer/UnitField"), NodePath("../HBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer/IngredientField"), NodePath("../HBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer2/AdditionalField") ]
validation_button = NodePath("../HBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer2/Add")

[connection signal="data_collected" from="Form" to="." method="_on_Form_data_collected"]
